# FlashMath

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-tauri.yml
public/: overlay.html
src/: globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  srs.rs
src-tauri/src/commands/: capture.rs  database.rs  files.rs  llm.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/card/: page.tsx
src/app/folder/: page.tsx
src/app/import/image/: page.tsx
src/app/import/pdf/: page.tsx
src/app/settings/: page.tsx
src/app/study/: page.tsx
src/components/: AIChatPanel.tsx  AnnotationCanvas.tsx  CardPreviewModal.tsx  FlashcardEditor.tsx  ImageDisplay.tsx  LaTeXRenderer.tsx  LaTeXToolbar.tsx  Layout.tsx  SessionSummary.tsx  Sidebar.tsx  StudyCard.tsx  Timer.tsx  ZoomableImage.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  textarea.tsx
src/hooks/: useTimer.ts
src/lib/: ai-chat.ts  commands.ts  constants.ts  database.ts  dialogs.ts  import-library.ts  review-policy.ts  types.ts  utils.ts
src/pages/: BrowsePage.tsx  CardPage.tsx  Dashboard.tsx  FolderOptionsPage.tsx  FolderPage.tsx  ImportImagePage.tsx  ImportLibraryPage.tsx  ImportPdfPage.tsx  SettingsPage.tsx  StudyPage.tsx
src/stores/: app-store.ts
